--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # --- HDFS LAYER (Storage) ---
   namenode:
@@ -7,11 +5,10 @@ services:
     container_name: namenode
     restart: always
     ports:
-      - "9870:9870" # Web UI
-      - "9000:9000" # IPC
+      - "9870:9870"
+      - "9000:9000"
     environment:
       - CLUSTER_NAME=netmob_cluster
-    # Strict RAM Limit: 1GB [cite: 16]
     deploy:
       resources:
         limits:
@@ -25,7 +22,6 @@ services:
     restart: always
     environment:
       - SERVICE_PRECONDITION=namenode:9870
-    # Boosted RAM Limit: 2GB for I/O buffering [cite: 17]
     deploy:
       resources:
         limits:
@@ -37,7 +33,7 @@ services:
 
   # --- SPARK LAYER (Compute) ---
   spark-master:
-    image: bitnami/spark:3.5.0
+    image: apache/spark:3.5.0  # <--- OFFICIAL IMAGE
     container_name: spark-master
     environment:
       - SPARK_MODE=master
@@ -46,70 +42,65 @@ services:
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
     ports:
-      - "8080:8080" # Web UI
-      - "7077:7077" # Master Port
-    # Strict RAM Limit: 1GB [cite: 19]
+      - "8080:8080"
+      - "7077:7077"
     deploy:
       resources:
         limits:
           memory: 1G
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master
 
   spark-worker-1:
-    image: bitnami/spark:3.5.0
+    image: apache/spark:3.5.0
     container_name: spark-worker-1
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark-master:7077
-      - SPARK_WORKER_MEMORY=3G  # JVM Heap
+      - SPARK_WORKER_MEMORY=3G
       - SPARK_WORKER_CORES=2
       - SPARK_RPC_AUTHENTICATION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-    # Strict RAM Limit: 3.5GB (3G Heap + 0.5G Overhead) 
     deploy:
       resources:
         limits:
           memory: 3.5G
     depends_on:
       - spark-master
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
 
   spark-worker-2:
-    image: bitnami/spark:3.5.0
+    image: apache/spark:3.5.0
     container_name: spark-worker-2
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark-master:7077
-      - SPARK_WORKER_MEMORY=3G # JVM Heap
+      - SPARK_WORKER_MEMORY=3G
       - SPARK_WORKER_CORES=2
       - SPARK_RPC_AUTHENTICATION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-    # Strict RAM Limit: 3.5GB (3G Heap + 0.5G Overhead) 
     deploy:
       resources:
         limits:
           memory: 3.5G
     depends_on:
       - spark-master
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
 
   # --- APP LAYER (Dashboard) ---
   streamlit-app:
     image: python:3.9-slim
     container_name: streamlit-app
-    # Strict RAM Limit: 1GB [cite: 22]
     deploy:
       resources:
         limits:
           memory: 1G
     volumes:
-      - ./app:/app       # Your python scripts go here
-      - ./data:/data     # Access to local data
+      - ./app:/app
+      - ./data:/data
     working_dir: /app
     ports:
       - "8501:8501"
-    command: tail -f /dev/null # Keeps container alive until we run the app
-
-volumes:
-  namenode:
-  datanode:
+    command: tail -f /dev/null
 
 networks:
   default:
