--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,107 +1,115 @@
+version: "3"
+
 services:
-  # --- HDFS LAYER (Storage) ---
   namenode:
     image: bde2020/hadoop-namenode:2.0.0-hadoop3.2.1-java8
     container_name: namenode
     restart: always
     ports:
-      - "9870:9870"
-      - "9000:9000"
+      - 9870:9870
+      - 9000:9000
+    volumes:
+      - hadoop_namenode:/hadoop/dfs/name
     environment:
       - CLUSTER_NAME=netmob_cluster
+    env_file:
+      - ./hadoop.env
     deploy:
       resources:
         limits:
           memory: 1G
-    volumes:
-      - ./data/namenode:/hadoop/dfs/name
 
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
     container_name: datanode
     restart: always
+    volumes:
+      - hadoop_datanode:/hadoop/dfs/data
     environment:
-      - SERVICE_PRECONDITION=namenode:9870
+      SERVICE_PRECONDITION: "namenode:9870"
+    env_file:
+      - ./hadoop.env
     deploy:
       resources:
         limits:
           memory: 2G
-    volumes:
-      - ./data/datanode:/hadoop/dfs/data
+
+  spark-master:
+    image: bde2020/spark-master:3.0.0-hadoop3.2
+    container_name: spark-master
+    restart: always
     depends_on:
       - namenode
-
-  # --- SPARK LAYER (Compute) ---
-  spark-master:
-    image: apache/spark:3.5.0  # <--- OFFICIAL IMAGE
-    container_name: spark-master
-    environment:
-      - SPARK_MODE=master
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_RPC_ENCRYPTION_ENABLED=no
-      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
+      - datanode
     ports:
       - "8080:8080"
       - "7077:7077"
+    environment:
+      - INIT_DAEMON_STEP=setup_spark
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+    env_file:
+      - ./hadoop.env
     deploy:
       resources:
         limits:
           memory: 1G
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master
 
   spark-worker-1:
-    image: apache/spark:3.5.0
+    image: bde2020/spark-worker:3.0.0-hadoop3.2
     container_name: spark-worker-1
+    restart: always
+    depends_on:
+      - spark-master
+    ports:
+      - "8081:8081"
     environment:
-      - SPARK_MODE=worker
-      - SPARK_MASTER_URL=spark://spark-master:7077
+      - "SPARK_MASTER=spark://spark-master:7077"
       - SPARK_WORKER_MEMORY=3G
       - SPARK_WORKER_CORES=2
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+    env_file:
+      - ./hadoop.env
     deploy:
       resources:
         limits:
           memory: 3.5G
-    depends_on:
-      - spark-master
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
 
   spark-worker-2:
-    image: apache/spark:3.5.0
+    image: bde2020/spark-worker:3.0.0-hadoop3.2
     container_name: spark-worker-2
+    restart: always
+    depends_on:
+      - spark-master
+    ports:
+      - "8082:8081"
     environment:
-      - SPARK_MODE=worker
-      - SPARK_MASTER_URL=spark://spark-master:7077
+      - "SPARK_MASTER=spark://spark-master:7077"
       - SPARK_WORKER_MEMORY=3G
       - SPARK_WORKER_CORES=2
-      - SPARK_RPC_AUTHENTICATION_ENABLED=no
-      - SPARK_SSL_ENABLED=no
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+    env_file:
+      - ./hadoop.env
     deploy:
       resources:
         limits:
           memory: 3.5G
-    depends_on:
-      - spark-master
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
 
-  # --- APP LAYER (Dashboard) ---
   streamlit-app:
     image: python:3.9-slim
     container_name: streamlit-app
-    deploy:
-      resources:
-        limits:
-          memory: 1G
+    restart: always
+    ports:
+      - "8501:8501"
     volumes:
       - ./app:/app
       - ./data:/data
     working_dir: /app
-    ports:
-      - "8501:8501"
     command: tail -f /dev/null
+    deploy:
+      resources:
+        limits:
+          memory: 1G
 
-networks:
-  default:
-    name: netmob-network
+volumes:
+  hadoop_namenode:
+  hadoop_datanode:
