--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - 9000:9000
     volumes:
       - hadoop_namenode:/hadoop/dfs/name
+      - ./data:/data          # <-- ADD THIS LINE
     environment:
       - CLUSTER_NAME=netmob_cluster
     env_file:
@@ -44,6 +45,8 @@ services:
     ports:
       - "8080:8080"
       - "7077:7077"
+    volumes:                           # ADD THIS
+      - ./app:/app                     # ADD THIS
     environment:
       - INIT_DAEMON_STEP=setup_spark
       - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
@@ -54,6 +57,7 @@ services:
         limits:
           memory: 1G
 
+
   spark-worker-1:
     image: bde2020/spark-worker:3.0.0-hadoop3.2
     container_name: spark-worker-1
@@ -62,6 +66,8 @@ services:
       - spark-master
     ports:
       - "8081:8081"
+    volumes:                           # ADD THIS
+      - ./app:/app                     # ADD THIS
     environment:
       - "SPARK_MASTER=spark://spark-master:7077"
       - SPARK_WORKER_MEMORY=3G
@@ -74,6 +80,7 @@ services:
         limits:
           memory: 3.5G
 
+
   spark-worker-2:
     image: bde2020/spark-worker:3.0.0-hadoop3.2
     container_name: spark-worker-2
@@ -82,6 +89,8 @@ services:
       - spark-master
     ports:
       - "8082:8081"
+    volumes:                           # ADD THIS
+      - ./app:/app                     # ADD THIS
     environment:
       - "SPARK_MASTER=spark://spark-master:7077"
       - SPARK_WORKER_MEMORY=3G
@@ -93,6 +102,7 @@ services:
       resources:
         limits:
           memory: 3.5G
+
 
   streamlit-app:
     image: python:3.9-slim
