--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -10,3 +10,6 @@ shapely==2.0.2         # Geometry backend
 
 # HDFS Connection (Optional but recommended)
 hdfs==2.7.3
+
+apache-sedona==1.5.1
+shapely==1.8.5
